# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/device_auth/deps_adapter/deviceauth_hals.gni")
import("//base/security/device_auth/services/deviceauth.gni")

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
module_output_path = "device_auth/device_auth_service"

##############################fuzztest##########################################
ohos_fuzztest("DevAuthServProcessBindDataFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "//base/security/device_auth/test/fuzztest/device_auth_service/devauthservprocessbinddata_fuzzer"
  include_dirs = inc_path + hals_inc_path
  include_dirs += [
    "//third_party/cJSON",
    "${frameworks_path}/inc/standard",
  ]
  sources = [ "devauthservprocessbinddata_fuzzer.cpp" ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-DHILOG_ENABLE",
  ]
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  deps = [
    "${deps_adapter_path}:${hal_module_name}",
    "//base/security/device_auth/services:deviceauth",
    "//third_party/cJSON:cjson_static",
  ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":DevAuthServProcessBindDataFuzzTest",
  ]
}
###############################################################################
