# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/device_auth/deps_adapter/deviceauth_hals.gni")
import("//base/security/device_auth/services/deviceauth.gni")

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
module_output_path = "device_auth/device_auth"

##############################fuzztest##########################################
ohos_fuzztest("ECSpekeFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "${deviceauth_path}/test/fuzztest/protocol/ecspeke_fuzzer"
  include_dirs = inc_path + hals_inc_path
  include_dirs += [
    ".",
    "${inner_api_path}",
    "${frameworks_path}/inc/standard",
    "${dev_frameworks_path}/inc/hiview_adapter",
    "${dev_frameworks_path}/inc/permission_adapter",
    "${dev_frameworks_path}/inc",
    "${session_manager_path}/inc/session/v2/auth_sub_session/protocol_lib",
  ]
  sources = [ "ecspeke_fuzzer.cpp" ]
  sources += deviceauth_ipc_files
  sources += permission_adapter_files
  sources += ec_speke_protocol_files
  sources += hiview_adapter_files

  defines = [ "ENABLE_EC_SPEKE" ]
  defines += [ "HILOG_ENABLE" ]
  defines += [ "DEV_AUTH_HIVIEW_ENABLE" ]
  defines += [ "DEV_AUTH_FUZZ_TEST" ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-DHILOG_ENABLE",
  ]
  cflags += build_flags
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  deps = [ "${deps_adapter_path}:${hal_module_test_name}" ]
  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "cJSON:cjson",
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "huks:libhukssdk",
    "init:libbegetutil",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":ECSpekeFuzzTest",
  ]
}
###############################################################################
