# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with License.
# You may obtain a copy of License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
import("//base/security/device_auth/deps_adapter/deviceauth_hals.gni")
import("//base/security/device_auth/services/deviceauth.gni")

module_output_path = "device_auth/device_auth"

hc_string_vector_test_includes = []
hc_string_vector_test_includes += inc_path
hc_string_vector_test_includes += hals_inc_path
hc_string_vector_test_includes += [
  "${common_lib_path}/interfaces",
  "${os_adapter_path}/impl/src",
  "${os_adapter_path}/impl/src/linux",
]

ohos_unittest("hc_string_vector_test") {
  module_out_path = module_output_path
  sources = [
    "hc_string_vector_test.cpp",
    "${common_lib_path}/impl/src/hc_string_vector.c",
    "${common_lib_path}/impl/src/hc_string.c",
    "${common_lib_path}/impl/src/hc_parcel.c",
    "${common_lib_path}/impl/src/hc_types.c",
    "${os_adapter_path}/impl/src/hc_log.c",
    "${os_adapter_path}/impl/src/linux/hc_file.c",
    "${os_adapter_path}/impl/src/hc_err_trace.c",
  ]
  include_dirs = hc_string_vector_test_includes
  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
  ]
  defines = [
    "HILOG_ENABLE",
  ]
  subsystem_name = "security"
  part_name = "device_auth"
}
