# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

group("os_adapter_tests") {
  testonly = true
  deps = [
    "dev_auth_dynamic_load:dev_auth_dynamic_load_test",
    "hc_init_protection:hc_init_protection_test",
    "hc_err_trace:hc_err_trace_test",
    "hc_log:hc_log_test",
    "hc_types:hc_types_hal_test",
    "hc_file:hc_file_test",
    "hc_condition:hc_condition_test",
    "hc_dev_info:hc_dev_info_test",
    "hc_thread:hc_thread_test",
    "hc_task_thread:hc_task_thread_test",
  ]
}
